--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   <div id="footer">
     <div id="legend"></div>
   </div>
-  <script src="bundle.js"></script>
+  <script src="assets/bundle.js"></script>
 </body>
 </html>
